--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,4 +1,5 @@
 <h3>OK HOME1</h3>
+<h3>OK HOME2</h3>
 <span>Đỉnh cao công nghệ</span>
-<h2>Hahashas</h2>
+<h2>ok thanks !!</h2>
 <img src="img/eva.png" alt="" srcset="">
