--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,5 +1,16 @@
-<h3>OK HOME1</h3>
-<h3>OK HOME2</h3>
-<span>Đỉnh cao công nghệ</span>
-<h2>ok thanks !!</h2>
-<img src="img/eva.png" alt="" srcset="">
+<div class="mt-4">
+    <div class="row">
+        {{#each courses}}
+            <div class="col-lg-3 col-md-6 card-data">
+                <div class="card" style="width: 18rem;">
+                    <img src="{{this.img}}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">{{this.name}}</h5>
+                        <p class="card-text">{{this.description}}</p>
+                        <a href="#" class="btn btn-primary">Mua khóa học</a>
+                    </div>
+                </div>
+            </div>
+       {{/each}}
+    </div>
+</div>
