--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,16 +1,22 @@
 <div class="mt-4">
     <div class="row">
         {{#each courses}}
-            <div class="col-lg-3 col-md-6 card-data">
-                <div class="card" style="width: 18rem;">
-                    <img src="{{this.img}}" class="card-img-top" alt="...">
+        <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="card-data">
+                <div class="card" style="width: 100%">
+                    <a href="/courses/{{this.slug}}">
+                        <img src="{{this.img}}" class="card-img-top" alt="...">
+                    </a>
                     <div class="card-body">
-                        <h5 class="card-title">{{this.name}}</h5>
+                        <a href="/courses/{{this.slug}}">
+                            <h5 class="card-title">{{this.name}}</h5>
+                        </a>
                         <p class="card-text">{{this.description}}</p>
                         <a href="#" class="btn btn-primary">Mua khóa học</a>
                     </div>
                 </div>
             </div>
+        </div>
        {{/each}}
     </div>
 </div>
