--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -3,7 +3,7 @@
         {{#each courses}}
         <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="card-data">
-                <div class="card" style="width: 100%">
+                <div class="card" style="width: 100% ; height: 450px;">
                     <a href="/courses/{{this.slug}}">
                         <img src="{{this.img}}" class="card-img-top" alt="...">
                     </a>
@@ -19,4 +19,6 @@
         </div>
        {{/each}}
     </div>
+    <button id="test">ok</button>
 </div>
+<script src=""></script>
